fix overflows on desktop using jacobs method

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,46 +60,56 @@ body {
 .card {
   background-color: white;
   border-radius: 1rem;
-  padding: 8rem 2rem 2rem 2rem;
   margin: 0 1rem;
   position: relative;
   box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2); }
-  @media only screen and (min-width: 56.25em) {
-    .card {
-      display: flex;
-      flex-direction: row;
-      padding: 4rem 5rem;
-      margin: 0 3rem; } }
-  .card .image-box {
-    position: absolute;
-    top: 0;
-    left: 50%; }
-    .card .image-box__platform {
+  .card__left .hidden {
+    width: 23rem;
+    height: 10rem;
+    margin: 0 auto;
+    background-image: url(../images/bg-pattern-mobile.svg);
+    background-size: 23rem;
+    background-repeat: no-repeat;
+    position: relative; }
+    .card__left .hidden .image-platform {
+      width: 112%;
       position: absolute;
-      transform: translate(-55%, -55%); }
-    .card .image-box__cube {
-      display: none; }
-  @media only screen and (min-width: 56.25em) {
-    .card .image-box {
-      flex: 1;
-      position: relative;
-      display: block;
-      left: 0; }
-      .card .image-box__platform {
-        position: absolute;
-        width: 134%;
-        top: 50%;
-        transform: translate(-44%, -50%); }
-      .card .image-box__cube {
-        width: 50%;
-        position: absolute;
-        top: 39%;
-        left: -59%;
-        display: block; } }
+      top: -10.5rem;
+      left: -12%; }
+  .card__left .image-cube {
+    display: none; }
+  .card__right {
+    padding: 3rem; }
 
 @media only screen and (min-width: 56.25em) {
-  .faq {
-    flex: 1; } }
+  .card {
+    width: 50rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; }
+    .card__left {
+      align-self: stretch; }
+      .card__left .hidden {
+        overflow: hidden;
+        height: 100%;
+        background-image: url(../images/bg-pattern-desktop.svg);
+        background-size: 25.6rem;
+        background-repeat: no-repeat;
+        background-position: -2.6rem -0.5rem;
+        position: relative; }
+        .card__left .hidden .image-platform {
+          position: absolute;
+          top: 2rem;
+          left: -12%; }
+      .card__left .image-cube {
+        position: absolute;
+        display: block;
+        top: 9.4rem;
+        left: -3.9rem;
+        width: 10rem;
+        height: 10rem; }
+    .card__right {
+      padding: 3rem; } }
 
 .faq__title {
   text-align: center;
