--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -1,54 +1,79 @@
+// MOBILE (DEFAULT)
 .card {
   background-color: white;
   border-radius: 1rem;
-  padding: 8rem 2rem 2rem 2rem;
   margin: 0 1rem;
   position: relative;
   box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2);
 
-  @include respond(desktop) {
-    display: flex;
-    flex-direction: row;
-    padding: 4rem 5rem;
-    margin: 0 3rem;
-  }
+  &__left {
+    .hidden {
+      width: 23rem;
+      height: 10rem;
+      margin: 0 auto;
+      background-image: url(../images/bg-pattern-mobile.svg);
 
-  // IMAGE BOX MOBILE
-  .image-box {
-    position: absolute;
-    top: 0;
-    left: 50%;
+      background-size: 23rem;
+      background-repeat: no-repeat;
+      position: relative;
 
-    &__platform {
-      position: absolute;
-      transform: translate(-55%, -55%);
+      .image-platform {
+        width: 112%;
+        position: absolute;
+        top: -10.5rem;
+        left: -12%;
+      }
     }
-    &__cube {
+    .image-cube {
       display: none;
     }
   }
 
-  // IMAGE BOX DESKTOP
-  @include respond(desktop) {
-    .image-box {
-      flex: 1;
-      position: relative;
-      display: block;
-      left: 0;
+  &__right {
+    padding: 3rem;
+  }
+}
 
-      &__platform {
-        position: absolute;
-        width: 134%;
-        top: 50%;
-        transform: translate(-44%, -50%);
+// DESKTOP
+@include respond(desktop) {
+  .card {
+    width: 50rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    &__left {
+      align-self: stretch;
+
+      .hidden {
+        overflow: hidden;
+        height: 100%;
+        background-image: url(../images/bg-pattern-desktop.svg);
+        background-size: 25.6rem;
+        background-repeat: no-repeat;
+        background-position: -2.6rem -0.5rem;
+
+        position: relative;
+
+        .image-platform {
+          position: absolute;
+          top: 2rem;
+          left: -12%;
+        }
       }
-      &__cube {
-        width: 50%;
+
+      .image-cube {
         position: absolute;
-        top: 39%;
-        left: -59%;
         display: block;
+        top: 9.4rem;
+        left: -3.9rem;
+        width: 10rem;
+        height: 10rem;
       }
+    }
+
+    &__right {
+      padding: 3rem;
     }
   }
 }
